--- a/client/fields.jade
+++ b/client/fields.jade
@@ -779,7 +779,7 @@ template(name='array_edit')
         //- +clear_value                
     if field_value
         each field_value
-            .ui.large.basic.label
+            .ui.large.basic.circular.label
                 i.delete.icon.remove_element
                 |#{this}
                 
