--- a/client/post.jade
+++ b/client/post.jade
@@ -28,9 +28,9 @@ template(name='post_view')
                     .ui.segment
                         |!{content}
                 .four.wide.column
-                    a.ui.fluid.large.basic.button(href="/")
-                        i.chevron.left.icon
-                        |family
+                    // a.ui.circular.icon.large.basic.button(href="/")
+                    //     i.chevron.left.icon
+                    //     i.big.yin.yang.icon
                     .ui.large.inline.header #{title}
                     // div
                     // .ui.inline.grey.header {{from_now start_datetime}}
@@ -38,7 +38,7 @@ template(name='post_view')
                     // if can_edit
                     //     a.edit_post(href="/m/post/#{_id}/edit" title='edit')
                     //         i.big.link.pencil.icon
-                    .ui.small.header created #{when} 
+                    // .ui.small.header created #{when} 
                     // .ui.small.grey.header 
                     //     i.line.chart.icon
                     //     |stats
