--- a/client/s.css
+++ b/client/s.css
@@ -605,7 +605,7 @@ a.title, #title {
 
 input {
     /*margin: 7px !important;*/
-    /*border-radius: 7px !important; */
+    border-radius: 7px !important; 
 }
 
 ::-webkit-scrollbar {
