--- a/client/post.jade
+++ b/client/post.jade
@@ -22,7 +22,7 @@ template(name='post_view')
             .row 
                 .twelve.wide.column
                     a(href="/")
-                        img.ui.fluid.image(src="{{c.url image_id }}" class=currentUser.invert_class)
+                        img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
                     // a.ui.header(href="/user/#{target.username}")
                     //     |#{target.username}
                     .ui.segment
