--- a/client/post.jade
+++ b/client/post.jade
@@ -28,9 +28,9 @@ template(name='post_view')
                     .ui.segment
                         |!{content}
                 .four.wide.column
-                    // a.ui.circular.icon.large.basic.button(href="/")
-                    //     i.chevron.left.icon
-                    //     i.big.yin.yang.icon
+                    a.ui.circular.icon.large.basic.button(href="/")
+                        i.chevron.left.icon
+                        i.big.yin.yang.icon
                     .ui.large.inline.header #{title}
                     // div
                     // .ui.inline.grey.header {{from_now start_datetime}}
@@ -90,7 +90,7 @@ template(name='post_edit')
                     //     |audience
                 .six.wide.column
                     +text_edit key='title' label='title' direct=true
-                    +textarea_edit key='content' label='content' direct=true
+                    +html_edit key='content' label='content' direct=true
                     +array_edit key='tags' label='tags' i='tags' direct=true
                     +array_edit key='location_tags' label='location tags' i='marker' direct=true
                     +array_edit key='people_tags' label='people tags' i='users' direct=true
