round of file removal from stack and reddit focus, 20 docs from 33

--- a/client/post.jade
+++ b/client/post.jade
@@ -20,7 +20,7 @@ template(name='post_view')
     with current_doc
         .ui.stackable.padded.grid
             .row 
-                .twelve.wide.column
+                .twelve.wide.column.scrolling
                     a(href="/")
                         img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
                     // a.ui.header(href="/user/#{target.username}")
