--- a/client/home.jade
+++ b/client/home.jade
@@ -1,94 +1,208 @@
+template(name='family')
+    .ui.stackable.grid
+        .four.wide.column
+            // .ui.header my 
+            // .ui.header posts
+            .ui.icon.circular.basic.button.add_fam_post
+                i.plus.icon
+            // .ui.input
+            //     input.add_fam_post(type='text' placeholder='add')
+            // .ui.segment
+            //     a.ui.header(href="/r/news")
+            //         i.globe.icon
+            //         |world news
+            //     div
+            //     a.ui.header(href="/r/politics")
+            //         i.newspaper.icon
+            //         |politics
+            if selected_family_tags
+                // if many_tags
+                //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
+                //         i.remove.icon
+                each selected_family_tags
+                    +family_unselect_tag
+            .ui.icon.input
+                i.search.icon
+                input.search_family_tag(type='text' value=family_query)
+            each family_result_tags
+                // .ui.label #{this}
+                +family_tag_selector
+                // .ui.large.label(title=count) #{name}
+            div
+            .ui.inline.small.header 
+                i.marker.icon
+                |where
+            each selected_location_tags
+                .ui.circular.large.black.button.unselect_location_tag
+                    |#{this}
+            each family_location_tags
+                .ui.compact.basic.tertiary.button.select_location_tag(class=domain_selector_class)
+                    |#{name} 
+                    // small #{count}
+            div
+            .ui.small.inline.header 
+                i.clock.icon
+                |when
+            each selected_time_tags
+                .ui.circular.large.black.button.unselect_time_tag
+                    |#{this}
+            each family_time_tags
+                .ui.compact.basic.tertiary.button.select_time_tag(class=domain_selector_class)
+                    |#{name} 
+                    // small #{count}
+            // .ui.inline.header #{post_count}
+            // each selected_family_People
+            //     .ui.button.unselect_family_People #{this}
+            // each family_People_tags
+            //     .ui.compact.basic.button.select_domain(class=domain_selector_class)
+            //         |#{name} 
+            //         small #{count}
+        .twelve.wide.column
+            // if skv_is 'family_sort_direction' 1
+            //     .ui.icon.compact.basic.tertiary.button.sort_down
+            //         i.caret.down.icon
+            // else
+            //     .ui.icon.compact.basic.tertiary.button.sort_up
+            //         i.caret.up.icon
+            // .ui.icon.button.sort_retweet(class=retweet_class)
+            //     i.refresh.icon
+            // .ui.icon.button.sort_favorite(class=fav_class)
+            //     i.favorite.icon
+            // .ui.icon.compact.basic.small.button.sort_date(class=date_class)
+            //     i.clock.icon
+            // // .ui.compact.basic.small.tertiary.button.limit_1
+            // //     |1
+            // // .ui.compact.basic.small.tertiary.button.limit_10
+            // //     |10
+            // .ui.icon.circular.basic.button.skip_left
+            //     i.chevron.left.icon
+            // .ui.icon.circular.basic.button.skip_right
+            //     i.chevron.right.icon
+            // |#{skip_value}
+            // .ui.small.input(title='skip number')
+            //     input.skip_number(type='number')
+            // img.ui.inline.image(src=data.header_img)
+            // .ui.inline.header.pull_latest #{data.title}
+            // +alpha
+            // div
+            // .scrolling
+            //     if family_docs
+            //         .ui.four.stackable.cards 
+            //             each family_docs
+            //                 +family_card
+            //     else
+            //         .ui.basic.center.aligned.segment
+            //             i.big.loading.yin.yang.icon
+        
+            // .ui.header photos
+            .ui.stackable.four.column.grid.scrolling
+                each tribe_posts
+                    +family_card
 
-template(name='unselect_tag')
-    a.unselect_tag.ui.black.compact.button.select_term(href='#')
+   
+template(name='family_card')
+    .ui.column
+        a(href="/p/#{_id}")
+            img.ui.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
+        .content
+            a.ui.small.header(href="/p/#{_id}") #{title}
+            // .f12(class=post_header_class) !{text}??
+            // +array_view key='tags' label='tags' direct=true
+            // +array_view key='location_tags' direct=true
+            // +array_view key='time_tags' direct=true
+            // +array_view key='people_tags' direct=true
+            a(href="/p/#{_id}") #{title}
+                |!{content}            
+            each tags
+                +flat_family_tag_selector
+                // a.ui.label.select_family_tag #{this}
+            each family_time_tags
+                .ui.small.basic.label.set_time_tag #{this}
+            if in_dev
+                +print_this
+            // +doc_emotion
+            // .ui.circular.basic.icon.button.vote_up
+            //     i.thumbs.up.icon
+            // |#{points}
+            // .ui.circular.basic.icon.button.vote_down
+            //     i.thumbs.down.icon
+            // .ui.fluid.icon.input
+            //     i.plus.icon
+            //     input.tag_tweet(type='text' placeholder='tag')
+   
+template(name='family_tag_selector')
+    // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.basic.compact.tertiary.small.button.zoomer.select_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+        if term
+            if term.watson.metadata.image
+                img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
+        strong #{name}
+        // if in_dev
+        //     small #{count}
+        
+template(name='family_unselect_tag')
+    a.unselect_family_tag.ui.black.large.compact.button(href='#')
         if term
             if term.watson.metadata.image
                 img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
         strong #{this}
 
-template(name='tag_selector')
+        
+        
+template(name='flat_family_tag_selector')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.zoomer.tertiary.button.say.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    .ui.basic.tertiary.compact.button.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
-                img.ui.avatar.image.zoomer(src=term.watson.metadata.image)    
-        | #{name}
-        // else
-        small #{count}
-        
-// template(name='select_subreddit')
-//     // a.ui.basic.button.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-//     a.ui.image.basic.label.pointer.zoomer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-//         if term
-//             if term.watson.metadata.image
-//                 img.ui.avatar.compact.image(src=term.watson.metadata.image)    
-//         | #{name}
-//         small #{count}
-
-// template(name='doc_tag')
-//     a.ui.image.large.basic.label.pointer.zoomer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-//         if term
-//             img.ui.avatar.compact.image(src=term.watson.metadata.image)    
-//         | #{this}
-//         small #{count}
+                img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
+        | #{this}
+        // if in_dev
+        //     small #{count}
 
 
-template(name='duck')
-    with content
-        // .ui.segment
-        .ui.inline.header #{Heading}
-        // .item abstract #{Abstract}
-        .item.abstract !{AbstractText}
-        a.ui.icon.button(href=AbstractURL)
-            // #{AbstractURL}
-            i.large.external.icon
-        img(src=Image)
-        each RelatedTopics
-            if Text
-                // .ui.compact.button.topic
-                .ui.pointer.small.header.topic(class=thinking_class)
-                    img.ui.mini.inline.rounded.image(src=Icon.URL)
-                    |#{Text}
-                    // | {{lowered Text}}
-            // .content
-            //     .item #{FirstURL}
-            //     .item !{Result}
+template(name='post_view')
+    with current_doc
+        .ui.stackable.grid
+            .row 
+                .thirteen.wide.column.scrolling
+                    a(href="/")
+                        img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
+                    .ui.basic.segment
+                        |!{content}
+                .three.wide.column
+                    a.ui.circular.icon.large.basic.button(href="/")
+                        i.chevron.left.icon
+                        i.big.yin.yang.icon
+                    .ui.large.inline.header #{title}
+                    .ui.list
+                        .item #{_views} views
+                    +array_edit key='tags' label='tags' direct=true
+                    +array_edit key='location_tags' direct=true
+                    +array_edit key='time_tags' direct=true
+                    +array_edit key='people_tags' direct=true
 
-
-
-    
-    
-// template(name='tone')
-//     // h3 tone
-//     .ui.horizontal.list
-//         each tone.result.document_tone.tones
-//             .item #{tone_id} {{ to_percent score }}%
-//     .ui.list.l11
-//         each tone.result.sentences_tone
-//             .item(class=sentence_class)
-//                 //- span #{sentence_id}
-//                 span.tone_item.ui.text.say(title="#{sentence_id}" class="#{tone_size} #{sentence_color}") 
-//                     |{{lowered text}}
-//                     span.content
-//                         // .inline.header(title="#{sentence_id}") {{lowered text}}
-//                         |#{weight}
-//                         // i.chevron.up.link.grey.large.icon.upvote_sentence
-//                         // i.chevron.down.link.grey.large.icon.downvote_sentence
-//                         each tones
-//                             .ui.small.basic.label(class="{{calculated_size 'weight'}} #{tone_label_class}") 
-//                                 span.ui.text
-//                                     |#{tone_id} &nbsp;
-//                                 | {{ to_percent score }}% 
-//                         // .ui.mini.transparent.icon.input
-//                         //     input.tag_sentence(type='text' placeholder='tag')
-//                         // each tags 
-//                         //     .ui.label #{this}
-
-
-template(name='call_tone')
-    button.ui.large.basic.button.call
-        i.download.icon
-        |analyze tone
-    if page_doc.tone 
-        i.checkmark.icon
-        
+template(name='post_edit')
+    with current_doc
+        .ui.stackable.padded.grid
+            .row
+                .ten.wide.column
+                    a.ui.big.button(href="/p/#{_id}" title='save')
+                        i.checkmark.big.icon
+                        |save
+                    .ui.inline.header
+                        i.pencil.icon
+                        |edit post
+                    i.large.link.remove.icon.delete_post
+                    +print_this
+                    +image_edit key='image_id' label='image' direct=true
+                    div 
+                .six.wide.column
+                    +text_edit key='title' label='title' direct=true
+                    +html_edit key='content' label='content' direct=true
+                    +array_edit key='tags' label='tags' i='tags' direct=true
+                    each tags
+                        +flat_family_tag_selector
+                    +array_edit key='location_tags' label='location tags' i='marker' direct=true
+                    +array_edit key='time_tags' label='time tags' i='clock' direct=true
+                    +array_edit key='people_tags' label='people tags' i='users' direct=true
+                
