--- a/client/s.css
+++ b/client/s.css
@@ -15,6 +15,10 @@ body {
   /*background: #0e0e44 !important; */
 }
 
+a {
+  color: black !important;
+}
+
 .seg {
   background: rgba(250,250,250,.85);
   /*opacity: .5;*/
