more fullscreen ui

--- a/client/s.css
+++ b/client/s.css
@@ -671,8 +671,8 @@ input {
     overflow-x:hidden;
     /*z-index:1001;*/
     /*margin-top: 1em; */
-    padding-top: .5em; 
-    padding: .4em;
+    /*padding-top: .5em; */
+    /*padding: .4em;*/
     /*padding-left: 1em;*/
 }
 .forty {
