--- a/client/home.jade
+++ b/client/home.jade
@@ -132,7 +132,7 @@ template(name='family_card')
    
 template(name='family_tag_selector')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.basic.compact.tertiary.small.button.zoomer.select_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    .ui.basic.compact.tertiary.button.zoomer.select_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
@@ -173,7 +173,7 @@ template(name='post_view')
                     a.ui.circular.icon.large.basic.button(href="/")
                         i.chevron.left.icon
                         i.big.yin.yang.icon
-                    .ui.large.inline.header #{title}
+                    .ui.inline.header #{title}
                     .ui.list
                         .item #{_views} views
                     +array_edit key='tags' label='tags' direct=true
