--- a/client/home.jade
+++ b/client/home.jade
@@ -103,7 +103,7 @@ template(name='family')
 template(name='family_card')
     .ui.column
         a(href="/p/#{_id}")
-            img.ui.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
+            img.ui.image(src="{{c.url image_id }}" class=currentUser.invert_class)
         .content
             a.ui.small.header(href="/p/#{_id}") #{title}
             // .f12(class=post_header_class) !{text}??
@@ -135,7 +135,7 @@ template(name='family_tag_selector')
     .ui.basic.compact.tertiary.button.zoomer.select_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
-                img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
+                img.ui.mini.inline.image.superzoom(src=term.watson.metadata.image )    
         strong #{name}
         // if in_dev
         //     small #{count}
@@ -166,7 +166,7 @@ template(name='post_view')
             .row 
                 .thirteen.wide.column.scrolling
                     a(href="/")
-                        img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
+                        img.ui.fluid.image(src="{{c.url image_id }}" class=currentUser.invert_class)
                     .ui.basic.segment
                         |!{content}
                 .three.wide.column
