fix add post route

--- a/client/home.jade
+++ b/client/home.jade
@@ -141,7 +141,7 @@ template(name='family_tag_selector')
         //     small #{count}
         
 template(name='family_unselect_tag')
-    a.unselect_family_tag.ui.black.large.compact.button(href='#')
+    a.unselect_family_tag.ui.black.large.compact.inverted.button(href='#')
         if term
             if term.watson.metadata.image
                 img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
