--- a/client/home.jade
+++ b/client/home.jade
@@ -102,7 +102,7 @@ template(name='family_card')
             // +array_view key='location_tags' direct=true
             // +array_view key='time_tags' direct=true
             // +array_view key='people_tags' direct=true
-            a(href="/p/#{_id}")
+            a.smallscroll(href="/p/#{_id}")
                 |!{content}            
             each tags
                 +flat_family_tag_selector
@@ -143,9 +143,9 @@ template(name='family_unselect_tag')
 template(name='flat_family_tag_selector')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
     .ui.basic.tertiary.compact.button.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
-        if term
-            if term.watson.metadata.image
-                img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
+        // if term
+        //     if term.watson.metadata.image
+        //         img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
         | #{this}
         // if in_dev
         //     small #{count}
