--- a/client/fields.jade
+++ b/client/fields.jade
@@ -762,32 +762,32 @@ template(name='datetime_view')
     strong &nbsp; #{field_value}
 
 
-template(name='array_edit')
-    .spacer
-    if i
-        i.grey.icon(class=i)
-        // +icon name=icon cl='ui avatar image'
-    .ui.inline.header
-        if title
-            |#{title}
-        else if label
-            |#{label}
-        else if key
-            |#{key}
-    .ui.input
-        input.new_element(type='text' placeholder='+' autocomplete="off")
-        //- +clear_value                
-    if field_value
-        each field_value
-            if in_dev
-                .ui.large.basic.circular.label
-                    i.delete.icon.remove_element
-                    |#{this}
-                .ui.compact.basic.circular.button.pick_tag
-                    |#{this}
-            else
-                .ui.compact.basic.circular.button.pick_tag
-                    |#{this}
+// template(name='array_edit')
+//     .spacer
+//     if i
+//         i.grey.icon(class=i)
+//         // +icon name=icon cl='ui avatar image'
+//     .ui.inline.header
+//         if title
+//             |#{title}
+//         else if label
+//             |#{label}
+//         else if key
+//             |#{key}
+//     .ui.input
+//         input.new_element(type='text' placeholder='+' autocomplete="off")
+//         //- +clear_value                
+//     if field_value
+//         each field_value
+//             if in_dev
+//                 .ui.large.basic.circular.label
+//                     i.delete.icon.remove_element
+//                     |#{this}
+//                 .ui.compact.basic.circular.button.pick_tag
+//                     |#{this}
+//             else
+//                 .ui.compact.basic.circular.button.pick_tag
+//                     |#{this}
             
                 
 template(name='array_view')
