--- a/client/home.jade
+++ b/client/home.jade
@@ -109,24 +109,13 @@ template(name='family_card')
                 // a.ui.label.select_family_tag #{this}
             each family_time_tags
                 .ui.small.basic.label.set_time_tag #{this}
-            if in_dev
-                +print_this
-            // +doc_emotion
-            // .ui.circular.basic.icon.button.vote_up
-            //     i.thumbs.up.icon
-            // |#{points}
-            // .ui.circular.basic.icon.button.vote_down
-            //     i.thumbs.down.icon
-            // .ui.fluid.icon.input
-            //     i.plus.icon
-            //     input.tag_tweet(type='text' placeholder='tag')
    
 template(name='family_tag_selector')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    .ui.basic.compact.tertiary.button.zoomer.select_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
-        if term
-            if term.watson.metadata.image
-                img.ui.mini.inline.image.superzoom(src=term.watson.metadata.image )    
+    .ui.basic.compact.tertiary.small.button.zoomer.select_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
+        // if term
+        //     if term.watson.metadata.image
+        //         img.ui.mini.inline.image.superzoom(src=term.watson.metadata.image )    
         strong #{name}
         // if in_dev
         //     small #{count}
@@ -142,7 +131,7 @@ template(name='family_unselect_tag')
         
 template(name='flat_family_tag_selector')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    .ui.basic.tertiary.compact.button.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
+    .ui.basic.tertiary.compact.tiny.button.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
         // if term
         //     if term.watson.metadata.image
         //         img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
@@ -198,4 +187,34 @@ template(name='post_edit')
                     +array_edit key='location_tags' label='location tags' i='marker' direct=true
                     +array_edit key='time_tags' label='time tags' i='clock' direct=true
                     +array_edit key='people_tags' label='people tags' i='users' direct=true
+                
+template(name='array_edit')
+    .spacer
+    if i
+        i.grey.icon(class=i)
+        // +icon name=icon cl='ui avatar image'
+    .ui.inline.header
+        if title
+            |#{title}
+        else if label
+            |#{label}
+        else if key
+            |#{key}
+    .ui.input
+        input.new_element(type='text' placeholder='+' autocomplete="off")
+        //- +clear_value                
+    if field_value
+        each field_value
+            if in_dev
+                .ui.large.basic.circular.label
+                    i.delete.icon.remove_element
+                    |#{this}
+                .ui.compact.basic.circular.button.pick_tag
+                    |#{this}
+            else
+                .ui.compact.basic.circular.button.pick_tag
+                    |#{this}
+            
+                
+                
                 
