--- a/client/home.jade
+++ b/client/home.jade
@@ -101,13 +101,19 @@ template(name='family_card')
             // +array_view key='time_tags' direct=true
             // +array_view key='people_tags' direct=true
             a.smallscroll(href="/p/#{_id}")
-                |!{content}            
+                |!{content}         
+            +youtube_view key='youtube_id' label='youtube id' direct=true
+                
             each tags
                 +flat_family_tag_selector
                 // a.ui.label.select_family_tag #{this}
             each family_time_tags
                 .ui.small.basic.label.set_time_tag #{this}
-   
+            .ui.fluid.icon.input
+                i.chat.icon
+                input.add_comment(type='text')
+            each comments
+                .ui.small.header #{body}
 template(name='family_tag_selector')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
     .ui.basic.compact.tertiary.small.button.zoomer.select_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
@@ -153,12 +159,18 @@ template(name='post_view')
                         +array_edit key='tags' label='tags' direct=true
                         +array_edit key='location_tags' label='where' direct=true
                         +array_edit key='time_tags' label='when' direct=true
-                        +youtube_view key='youtube_id' label='youtube id' direct=true
 
                         +array_edit key='people_tags' label='who' direct=true
                 .thirteen.wide.column.scrolling
+                    +youtube_view key='youtube_id' label='youtube id' direct=true
                     .ui.basic.segment.say_content
                         |!{content}
+                    .ui.fluid.icon.input
+                        i.chat.icon
+                        input.add_comment(type='text')
+                    each comments
+                        .ui.small.header #{body}
+                        
                     a(href="/")
                         img.ui.fluid.image(src="{{c.url image_id }}" class=currentUser.invert_class)
 
