--- a/client/s.css
+++ b/client/s.css
@@ -333,7 +333,7 @@ input
 
 
 .rounded {
-  border-radius: 7px !important; 
+  /*border-radius: 5px !important; */
   /*padding: 10px !important; */
 }
 
