--- a/client/fields.jade
+++ b/client/fields.jade
@@ -629,3 +629,78 @@ template(name='boolean_view')
         else
             i.cancel.grey.icon
 
+
+template(name='number_edit')
+    div
+        //- i.grey.icon(class=icon)
+    .ui.inline.small.header(title=tip)
+        if icon
+            i.icon(class=icon)
+            // +icon name=icon cl='ui avatar image'
+        if title
+            |#{title}
+        else if label
+            |#{label}
+        else
+            |#{key}
+    if tooltip
+        .ui.tiny.grey.inline.header #{tooltip}
+        div
+    //- +clear_value  
+    .ui.input            
+        input.edit_number(type='number' min=min max=max class=cl value=field_value placeholder=placeholder autocomplete="off")
+            
+            
+template(name='number_view')
+    if field_value
+        div
+        if icon
+            //- i.grey.icon(class=icon)
+            +icon name=icon cl='ui inline mini image'
+        .ui.inline.small.header
+            if title
+                |#{title}
+            else if label
+                |#{label}
+            //- else if key
+            //-     |#{key}
+            //- else
+            //-     |#{this}
+        .ui.inline.header &nbsp;
+            if unit
+                span #{prefix}
+            |#{field_value}
+
+
+template(name='float_edit')
+    .ui.small.grey.inline.header(title=tip)
+        if icon
+            // i.grey.icon(class=icon)
+            +ismall name=icon
+        if title
+            |#{title}
+        else if label
+            |#{label}
+        else
+            |#{key}
+    //- +clear_value  
+    .ui.input            
+        input.edit_float(type='number' class=cl min=min step=step value=field_value placeholder=placeholder autocomplete="off")
+            
+template(name='float_view')
+    if field_value
+        div
+        if icon
+            //- i.grey.icon(class=icon)
+            +icon name=icon cl='ui inline mini image'
+        .ui.inline.header
+            if title
+                |#{title}
+            else if label
+                |#{label}
+            else if key
+                |#{key}
+            else
+                |#{this}
+        .ui.inline.large.header &nbsp; #{field_value}
+
